--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,11 @@
 use_frameworks!
+platform :ios, '9.0'
 
 target 'RegeributedTextView_Example' do
-  pod 'RegeributedTextView', :path => '../'
-  target 'RegeributedTextView_Tests' do
-    inherit! :search_paths
-    pod 'Quick', '~> 1.2.0'
-    pod 'Nimble', '~> 7.0.2'
-  end
+    pod 'RegeributedTextView', :path => '../'
+    target 'RegeributedTextView_Tests' do
+        inherit! :search_paths
+        pod 'Quick'
+        pod 'Nimble'
+    end
 end
